# OptymalizacjaLancuchaDostawcow

./: CMakeLists.txt  CRandom.cpp  CRandom.h  DiffEvol.cpp  DiffEvol.h  Matrix.cpp  Matrix.h  MscnProblem.cpp  MscnProblem.h  MscnSolution.cpp  MscnSolution.h  Optimizer.h  Problem.h  RandomSearch.cpp  RandomSearch.h  Timer.cpp  Timer.h  TrivialOptimizer.cpp  TrivialOptimizer.h  main.cpp
